--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect-mongo": "^3.1.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "if-env": "^1.0.4",
     "mongoose": "^5.7.8",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
