--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "spectre.css": "^0.5.8"
+    "react-typist": "^2.0.5",
+    "spectre.css": "^0.5.8",
+    "typist": "^0.1.0"
   }
 }
