signup button-shake

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.0.0",
     "connect-mongo": "^3.1.2",
+    "csshake": "^1.5.3",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
